--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,11 @@
+body {
+    background-color: rgb(200, 236, 236);
+}
+
 h2 {
     text-align: center;
+}
+
+p {
+    text-decoration: underline;
 }
