--- a/Style.css
+++ b/Style.css
@@ -1,11 +1,14 @@
 body {
-    background-color: rgb(200, 236, 236);
+    background-color: rgb(214, 241, 171);
 }
 
 h2 {
     text-align: center;
+    text-transform: capitalize;
 }
 
 p {
     text-decoration: underline;
+    text-indent: 30px;
+    margin-left: 50px;
 }
